src/metrics/snapshots/big_code_analysis__metrics__loc__tests__mozjs_blank.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 5,
  "ploc": 3,
  "lloc": 1,
  "cloc": 0,
  "blank": 2,
  "sloc_average": 2.5,
  "ploc_average": 1.5,
  "lloc_average": 0.5,
  "cloc_average": 0.0,
  "blank_average": 1.0,
  "sloc_min": 5,
  "sloc_max": 5,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 3,
  "ploc_max": 3,
  "lloc_min": 1,
  "lloc_max": 1,
  "blank_min": 2,
  "blank_max": 2
}
