src/metrics/snapshots/big_code_analysis__metrics__loc__tests__perl_no_zero_blank.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 6,
  "ploc": 5,
  "lloc": 5,
  "cloc": 2,
  "blank": 1,
  "sloc_average": 6.0,
  "ploc_average": 5.0,
  "lloc_average": 5.0,
  "cloc_average": 2.0,
  "blank_average": 1.0,
  "sloc_min": 6,
  "sloc_max": 6,
  "cloc_min": 2,
  "cloc_max": 2,
  "ploc_min": 5,
  "ploc_max": 5,
  "lloc_min": 5,
  "lloc_max": 5,
  "blank_min": 1,
  "blank_max": 1
}
