src/metrics/snapshots/big_code_analysis__metrics__loc__tests__php_arrow_function_in_function_lloc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 5,
  "ploc": 5,
  "lloc": 2,
  "cloc": 0,
  "blank": 0,
  "sloc_average": 1.6666666666666667,
  "ploc_average": 1.6666666666666667,
  "lloc_average": 0.6666666666666666,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 1,
  "sloc_max": 5,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 1,
  "ploc_max": 5,
  "lloc_min": 0,
  "lloc_max": 2,
  "blank_min": 0,
  "blank_max": 0
}
